sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:10: error: ';' expected but 'else' found.
      else rien +=1
      ^AlgBubbleSort1:12: error: ';' expected but 'if' found.
    }if (rien == len-2) {
     ^